--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,16 @@
   "dependencies": {
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
+    "framer-motion": "^12.6.0",
     "lucide-react": "^0.344.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.4.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
